--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-list",
+  "name": "03-todo-list",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -16,6 +16,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "standard": "^17.0.0",
     "vite": "^4.1.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/standard/eslintrc.json"
+    ]
   }
 }
